--- a/Weather.html
+++ b/Weather.html
@@ -48,7 +48,7 @@
 	</body>
 </html>
 <script type= "text/javascript" 
-         src = "http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+         src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		 
 <script src="https://cdn.rawgit.com/monkeecreate/jquery.simpleWeather/master/jquery.simpleWeather.min.js" type "text/javascript"></script>
 
