--- a/Weather.html
+++ b/Weather.html
@@ -42,9 +42,25 @@
 #weather .currently {
   margin: 0 20px;
 }
+
+button {
+  display: block;
+  margin: 15px auto;
+  width: 140px;
+  padding: 5px;
+  background: transparent;
+  color: #fff;
+  border: 0;
+  border-radius: 5px;
+}
+
+
 	</style>
+	
+	
 	<body>
 	<div id="weather"></div>
+	<button class="js-geolocation" style="display: none;">Use Your Location</button>
 	</body>
 </html>
 <script type= "text/javascript" 
@@ -54,27 +70,42 @@
 
 <script>
 // Docs at http://simpleweatherjs.com
+
+/* Does your browser support geolocation? */
+if ("geolocation" in navigator) {
+  $('.js-geolocation').show(); 
+} else {
+  $('.js-geolocation').hide();
+}
+/* Where in the world are you? */
+$('.js-geolocation').on('click', function() {
+  navigator.geolocation.getCurrentPosition(function(position) {
+    loadWeather(position.coords.latitude+','+position.coords.longitude); //load weather using your lat/lng coordinates
+  });
+});
+
 $(document).ready(function() {
+  loadWeather('Costa Mesa, CA',''); //@params location, woeid
+});
+
+function loadWeather(location, woeid) {
   $.simpleWeather({
-    woeid: '2357536', //2357536
-    location: 'Costa Mesa, CA',
+    location: location,
+    woeid: woeid,
     unit: 'f',
     success: function(weather) {
-      html = '<h2>'+weather.temp+'&deg;'+weather.units.temp+'</h2>';
+      html = '<h2><i class="icon-'+weather.code+'"></i> '+weather.temp+'&deg;'+weather.units.temp+'</h2>';
       html += '<ul><li>'+weather.city+', '+weather.region+'</li>';
       html += '<li class="currently">'+weather.currently+'</li>';
+      html += '<li>'+weather.alt.temp+'&deg;C</li></ul>';  
       
-      for(var i=0;i<weather.forecast.length;i++) {
-        html += '<p>'+weather.forecast[i].day+': '+weather.forecast[i].high+' / '+weather.forecast[i].low+'</p>';
-      }
-  
       $("#weather").html(html);
     },
     error: function(error) {
       $("#weather").html('<p>'+error+'</p>');
     }
   });
-});
+}
 </script>
 
 <script>
