changing default city

--- a/Weather.html
+++ b/Weather.html
@@ -85,7 +85,7 @@ $('.js-geolocation').on('click', function() {
 });
 
 $(document).ready(function() {
-  loadWeather('Costa Mesa, CA',''); //@params location, woeid
+  loadWeather('Long Beach, CA',''); //@params location, woeid
 });
 
 function loadWeather(location, woeid) {
