--- a/Weather.html
+++ b/Weather.html
@@ -102,7 +102,7 @@ function loadWeather(location, woeid) {
     woeid: woeid,
     unit: 'f',
     success: function(weather) {
-      html = '<h2>'+weather.temp+'&deg;'+weather.units.temp+'</h2>';
+      html = '<h2>'+weather.temp+'&deg;'+weather.units.temp+' '+weather.humidity+'%</h2>';
       html += '<ul><li>'+weather.city+', '+weather.region+'</li>';
       html += '<li class="currently">'+weather.currently+'</li>';
       
