--- a/Weather.html
+++ b/Weather.html
@@ -20,7 +20,7 @@
 #weather h2 {
   margin: 0 0 8px;
   color: #fff;
-  font-size: 150px;
+  font-size: 80px;
   font-weight: 300;
   text-align: center;
   text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.15);
@@ -102,7 +102,7 @@ function loadWeather(location, woeid) {
     woeid: woeid,
     unit: 'f',
     success: function(weather) {
-      html = '<h2>'+weather.temp+'&deg;'+weather.units.temp+' '+weather.humidity+'%</h2>';
+      html = '<h2>'+weather.temp+'&deg;'+weather.units.temp+' '+weather.humidity+'% Hum.</h2>';
       html += '<ul><li>'+weather.city+', '+weather.region+'</li>';
       html += '<li class="currently">'+weather.currently+'</li>';
       
