--- a/Weather.html
+++ b/Weather.html
@@ -107,7 +107,7 @@ function loadWeather(location, woeid) {
       html += '<li class="currently">'+weather.currently+'</li>';
       
       for(var i=0;i<weather.forecast.length;i++) {
-        html += '<p>'+weather.forecast[i].day+': '+weather.forecast[i].text+' High/Low - '+weather.forecast[i].high+'/'+weather.forecast[i].low+' weather.humidity+'% Hum. </p>';
+        html += '<p>'+weather.forecast[i].day+': '+weather.forecast[i].text+' High/Low - '+weather.forecast[i].high+'/'+weather.forecast[i].low+' '+weather.humidity+'% Hum. </p>';
       }
   
       $("#weather").html(html);
