--- a/StockHistory.html
+++ b/StockHistory.html
@@ -3,7 +3,7 @@
 <title>Run your first Perl script</title>
 </head>
 <body>
-  <button onclick="myFunction()">Click me</button>
+  <button onclick="getStock()">Click me</button>
 </body>
 </html>
 
