--- a/StockHistory.html
+++ b/StockHistory.html
@@ -8,7 +8,7 @@
 </html>
 
 <script>
-  getStock(){
+  function getStock() {
       window.location.href = 'http://ichart.finance.yahoo.com/table.csv?s=YHOO&d=0&e=28&f=2010&g=d&a=3&b=12&c=1996&ignore=.csv';
   }
 
