--- a/StockHistory.html
+++ b/StockHistory.html
@@ -9,7 +9,7 @@
 
 <script>
   function getStock() {
-      window.location.href = 'http://ichart.finance.yahoo.com/table.csv?s=YHOO&d=0&e=28&f=2010&g=d&a=3&b=12&c=1996&ignore=.csv';
+      window.location.href = 'http://ichart.finance.yahoo.com/table.csv?s=YOO&d=0&e=28&f=2010&g=d&a=3&b=12&c=1996&ignore=.csv';
   }
 
   
