--- a/StockHistoryTable.html
+++ b/StockHistoryTable.html
@@ -23,6 +23,9 @@
 </body>
 </html>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdn.datatables.net/r/dt/dt-1.10.9/datatables.min.css"></script>
+<script src="https://cdn.datatables.net/r/dt/dt-1.10.9/datatables.min.js"></script>
 <script>
 function getData() {
     var url = "http://query.yahooapis.com/v1/public/yql";
